spacing fix

--- a/styles/animeCharacter.css
+++ b/styles/animeCharacter.css
@@ -32,7 +32,7 @@
     color: white;
     padding: 0px;
     bottom: 12%;
-    left: 1%;
+    left: 2%;
     font-size: 24px;
     text-align: left;
     border-width: 0px;
